--- a/style/style.css
+++ b/style/style.css
@@ -131,3 +131,18 @@ a
     width: 80%;
     margin: auto;
 }
+/* start moaal */
+
+.modal-body,.modal-header{
+    background-color: #0D0D0D !important;
+    border: none;
+    color: #f9f6f6 !important;
+   
+}
+.btn-close{
+    color: #fff !important;
+    font-size: 1.5rem;
+    
+}
+
+/* end modal */
